--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,4 +13,4 @@ jobs:
       # Commands are run in a Windows 
       # virtual machine environment
       - checkout
-      - run: buildexe.bat
+      - run: ./buildexe.bat
